@@ -1,3 +1,8 @@
+2000-07-18  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/Makefile.postamble: Improve warning messages for gdomap install
+	* Source/NSProcessInfo.m: Change __MINGW32__ to __MINGW__
+
 2000-07-17  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSZone.m: Remove duplicate function definitions (when 
